# robot-security-tsbb11

./: .gitignore  README.md  start-up-script.sh
Documents/: testfile.txt
Documents/Gitintro/: gitintro.lyx
Documents/Presentation[Latex]/: Backgroundsegmentation.tex  Calibration.tex  Clustering.tex  DistanceCalc.tex  Evaluation.tex  Overview.tex  PointCloudCalc.tex  RemovalofRobot.tex  Results.tex  Robot.tex  Tracking.tex  Visualization.tex  presentation.tex
Documents/ProjectPlan/: .gitignore  Project_Plan.tex
Documents/Report[Latex]/: .gitignore  Background.tex  Background_Segmentation.tex  Calibration.tex  Clustering.tex  Conclusion_Discussion.tex  Development_Environment.tex  Distance_Calculation.tex  Input_Data.tex  Preamble.tex  Project_Description.tex  Removal_Of_Robot.tex  Report.out  Report.tex  (+6 more)
Finished_Documents/: HowTo_MrRoboto.tex
catkin_ws/: .cproject  .project  camMat.yaml  camMatRGB.yaml
catkin_ws/src/distanceCalc/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/distanceCalc/msg/: distanceMessage.msg  distanceMessage.msg~  returntest.msg  returntest2.msg
catkin_ws/src/distanceCalc/src/: DistanceHandler.hpp  distanceCalculation.cpp
catkin_ws/src/distance_calc/: CMakeLists.txt  package.xml  package.xml~
catkin_ws/src/distance_calc/msg/: returntest.msg~  returntest2.msg~
catkin_ws/src/distance_calc/src/: #DistanceHandler.hpp#  DistanceHandler.hpp  DistanceHandler.hpp~  distanceCalculation.cpp
movies/: realTest1.webm  realTest3.webm  realTest6.webm
robot/: ALL.PRM  MpRosSia20.out
src/: basicBGSubtractor.cpp  example.cpp
(+26 files in other folders)
